feat(devx): Edited patterns/transferable-witness.mdx and witness.mdx

--- a/docs/content/developer/iota-101/move-overview/patterns.mdx
+++ b/docs/content/developer/iota-101/move-overview/patterns.mdx
@@ -9,12 +9,12 @@ Topics in this section introduce Move coding patterns that solve various logic n
 
 A capability is a pattern that allows authorizing actions with an object. See [Capabilities](patterns/capabilities.mdx) for an example of this pattern.
 
-## Witness and transferrable witness
+## Witness and Transferable witness
 
 A witness is a type with `drop` that proves that its owner was present at the time of some privileged operation, for example having access to the one-time witness ([OTW](../../iota-101/move-overview/one-time-witness.mdx)) for a module proves that the code is being run at the time the module was first published. See the following topics for details.
 
 - [Witness](./patterns/witness)
-- [Transferrable Witness](./patterns/transferrable-witness)
+- [Transferable Witness](./patterns/transferable-witness)
 
 ## Hot potato
 
