--- a/docs/content/developer/iota-101/move-overview/patterns/witness.mdx
+++ b/docs/content/developer/iota-101/move-overview/patterns/witness.mdx
@@ -1,22 +1,26 @@
 ---
-title: Witness
+description: Overview of the witness pattern in Move and its implementation.
 ---
 
-A witness is a type with `drop` that proves that its owner was present at the time of some privileged operation, for example having access to the "one-time witness" for a module proves that the code is being run at the time the module was first published. `Coin` uses this pattern to ensure its treasury is only created once.
+# Witness Pattern
+
+A witness is a type with the `drop` ability that serves as proof that its owner was present during a specific privileged operation.
+For example, possessing a "one-time witness" for a module demonstrates that the code is being executed at the time of the module's initial publication.
+The [`Coin`](../../../../references/framework/iota-framework/coin.mdx) module leverages this pattern to ensure that its treasury is created only once.
 
 ```move
-/// Module that defines a generic type `Guardian<T>` which can only be
+/// Module that defines a generic type `Guardian<T>` that can only be
 /// instantiated with a witness.
 module examples::guardian {
 
-    /// Phantom parameter T can only be initialized in the `create_guardian`
-    /// function. But the types passed here must have `drop`.
+    /// The phantom parameter T can only be initialized in the `create_guardian`
+    /// function, and the types passed must have the `drop` ability.
     public struct Guardian<phantom T: drop> has key, store {
         id: UID
     }
 
-    /// The first argument of this function is an actual instance of the
-    /// type T with `drop` ability. It is dropped as soon as received.
+    /// This function takes an instance of the type T with the `drop` ability as
+    /// its first argument. The instance is dropped immediately upon receipt.
     public fun create_guardian<T: drop>(
         _witness: T, ctx: &mut TxContext
     ): Guardian<T> {
@@ -27,15 +31,15 @@ module examples::guardian {
 /// Custom module that makes use of the `guardian`.
 module examples::peace_guardian {
 
-    // Use the `guardian` as a dependency.
+    // Import the `guardian` module as a dependency.
     use 0x0::guardian;
 
-    /// This type is intended to be used only once.
+    /// This type is intended for single-use only.
     public struct PEACE has drop {}
 
-    /// Module initializer is the best way to ensure that the
-    /// code is called only once. With `Witness` pattern it is
-    /// often the best practice.
+    /// The module initializer is the optimal way to ensure that
+    /// the code is executed only once. When combined with the
+    /// Witness pattern, it ensures best practices.
     fun init(ctx: &mut TxContext) {
         transfer::public_transfer(
             guardian::create_guardian(PEACE {}, ctx),
@@ -44,8 +48,3 @@ module examples::peace_guardian {
     }
 }
 ```
-
-This pattern is used in these examples:
-
-- Liquidity pool
-- Regulated coin
