feat(devx): Moved patterns into the corresponding folder

--- a/docs/content/developer/iota-101/move-overview/move-overview.mdx
+++ b/docs/content/developer/iota-101/move-overview/move-overview.mdx
@@ -96,7 +96,7 @@ A one-time witness (OTW) is a unique instance of a type created in the module in
 
 ### Patterns
 
-Move coding patterns provide solutions to common logic challenges encountered when developing Move packages for the IOTA blockchain. For a list of documented patterns, see the [Patterns](patterns.mdx) section.
+Move coding patterns provide solutions to common logic challenges encountered when developing Move packages for the IOTA blockchain. For a list of documented patterns, see the [Patterns](patterns/patterns.mdx) section.
 
 
 
