created files for the snippets in conventions and patterns

--- a/docs/content/developer/iota-101/move-overview/one-time-witness.mdx
+++ b/docs/content/developer/iota-101/move-overview/one-time-witness.mdx
@@ -23,6 +23,5 @@ you can pass an instance of it to [`iota::types::is_one_time_witness`](../../../
 The following example demonstrates how to implement and utilize a OTW in a Move module:
 
 
-```move
-
+```move file=<rootDir>/docs/examples/move/move-overview/otw.move
 ```
