--- a/docs/content/developer/iota-101/move-overview/patterns/capabilities.mdx
+++ b/docs/content/developer/iota-101/move-overview/patterns/capabilities.mdx
@@ -10,31 +10,5 @@ the [`UpgradeCap`](../package-upgrades/upgrade.mdx#upgrade-requirements) is used
 Another common example is the [`TreasuryCap`](../../../../references/framework/iota-framework/coin.mdx#resource-treasurycap),
 which grants the authority to manage treasury functions.
 
-```move
-module examples::item {
-    use std::string::String;
-
-    /// Type representing the capability to create new `Item`s.
-    public struct AdminCap has key { id: UID }
-
-    /// Custom NFT-like type representing an item.
-    public struct Item has key, store { id: UID, name: String }
-
-    /// Module initializer, called once during the module's deployment.
-    /// This function creates a single instance of `AdminCap` and assigns it to the publisher.
-    fun init(ctx: &mut TxContext) {
-        transfer::transfer(AdminCap {
-            id: object::new(ctx)
-        }, tx_context::sender(ctx))
-    }
-
-    /// Function to create a new `Item`. It requires `AdminCap` to authorize the action.
-    public fun create_item(_: &AdminCap, name: String, ctx: &mut TxContext): Item {
-        let item = Item {
-            id: object::new(ctx),
-            name,
-        };
-        item
-    }
-}
+```move file=<rootDir>/docs/examples/move/move-overview/patterns/capabilities.move
 ```
