--- a/docs/content/developer/iota-101/create-coin/regulated.mdx
+++ b/docs/content/developer/iota-101/create-coin/regulated.mdx
@@ -124,4 +124,4 @@ MutatedObjects:
 
 ```
 
-For all `Coin` functions available, see the IOTA framework [`coin` module documentation](/references/framework/iota-framework/coin.md).
+For all `Coin` functions available, see the IOTA framework [`coin` module documentation](/references/framework/iota-framework/coin.mdx).
